[gd_scene load_steps=2 format=3 uid="uid://e7j8k9l0m1n2"]

[ext_resource type="Script" path="res://scripts/DefeatScreen.gd" id="1"]

[node name="DefeatScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 0.9, 0.9, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Try Again"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close Game"